# rupert

./: .gitignore  CLAUDE.md
backend/: .env.example  api_requests.http  pyproject.toml
backend/src/rupert/: __init__.py  api.py  config.py  hello_world.py  langchain_hello.py  llm.py  main.py
backend/tests/: test_api.py  test_hello_world.py  test_langchain_hello.py  test_llm_integration.py
