[project]
name = "rupert"
version = "0.1.0"
description = "A personal AI assistant with memory and personality"
authors = [
    {name = "Wojciech Korczynski",email = "wojciech.korczynski@gmail.com"}
]
packages = [{include = "rupert", from = "src"}]
requires-python = "^3.12"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.72,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
